100. Implements ProductPatchDTO to Product Mapper
